k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  type: ClusterIP
  ports:
    - port: 4200
      targetPort: 4200
  selector:
    app: angular-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
        - name: angular-container
          image: angular-image # Corrected image for angular
          ports:
            - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: node-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-service
  template:
    metadata:
      labels:
        app: node-service
    spec:
      containers:
        - name: node-container
          image: node-image # Corrected image for node
          ports:
            - containerPort: 3000
